--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ stages:
     jobs:
       - deployment: deployDEV
         displayName: Deploy package to DEV Orchestrator
-        pool: LAPTOP-Q338O4FK
+        pool: 
         environment: DEV
         strategy:
          runOnce:
@@ -59,7 +59,7 @@ stages:
     jobs:
         - job: WorkflowAnalyser
           displayName: AnalyseProject Using Workflow Cli
-          pool: LAPTOP-Q338O4FK
+          pool: Azure-UIP
           steps:
           - task: PowerShell@2
             inputs:
