--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,112 +1,13 @@
 trigger:
-  - master
-variables:
-  - group: DEV
-
+ - main
 stages:
-  - stage: Build
-    displayName: Build Package
-    jobs: 
-    - job: BuildPackage
-      pool: LAPTOP-Q338O4FK
-      steps:    
-      - task: UiPathPack@2
-        inputs:
-          versionType: 'AutoVersion'
-          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
-          outputType: 'Process'
-          orchestratorConnection: 'UiPath DEV'
-          outputPath: '$(Build.ArtifactStagingDirectory)'
-      - publish: $(Build.ArtifactStagingDirectory)
-        artifact: drop
-
-  - stage: Assest
-    displayName: Create Assests
-    jobs:
-      - job: CreateAssests
-        pool: LAPTOP-Q338O4FK
-        steps:
-        - task: UiPathAssets@2
-          inputs:
-            orchestratorConnection: 'UiPath DEV'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
-
-  - stage: DeployDEV
-    displayName: Deploy build artifact to DEV
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - deployment: deployDEV
-        displayName: Deploy package to DEV Orchestrator
-        pool: 
-        environment: DEV
-        strategy:
-         runOnce:
-          deploy:
-           steps:
-            - task: UiPathDeploy@2
-              inputs:
-                orchestratorConnection: 'UiPath DEV'
-                packagesPath: '$(Pipeline.Workspace)\drop\'
-                folderName: 'Shared'
-                
-  - stage: WorkflowAnalyser
-    displayName: RunWorkflow Analyser
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-        - job: WorkflowAnalyser
-          displayName: AnalyseProject Using Workflow Cli
-          pool: Azure-UIP
-          steps:
-          - task: PowerShell@2
-            inputs:
-              targetType: filePath
-              filePath: $(Build.SourcesDirectory)\Data\Workflow-Analyzer-CLI-Script
-              arguments: > # Use this to avoid newline characters in multiline string
-                -ProjectFilePath $(Build.SourcesDirectory)\project.json
-                -ExecutableFilePath "C:\Users\prasa\AppData\Local\UiPath\app-21.4.4\UiPath.Studio.CommandLine.exe"
-                -OutputFilePath '$(Pipeline.Workspace)\drop\Workflow-Analysis.json'
-              workingDirectory: $(Build.SourcesDirectory)
-            displayName: 'Analyse Project'
-
-  - stage : CodeQuality
-    displayName: Check Code Analysis
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - job : CodeQuality
-        steps:
-          - task: SonarCloudPrepare@1
-            inputs:
-              SonarCloud: 'Sonar'
-              organization: 'rpabotsworld'
-              scannerMode: 'CLI'
-              configMode: 'manual'
-              cliProjectKey: 'rpabotsworld_UiPathAzureDevOpsExample'
-              cliProjectName: 'UiPathAzureDevOpsExample'
-              cliSources: '.'
-          - task: SonarCloudAnalyze@1
-          - task: SonarCloudPublish@1
-            inputs:
-              pollingTimeoutSec: '300'
-
-
-  - stage: TestDEV
-    displayName:  Test After Publish
-    dependsOn: DeployDEV
-    condition: succeeded()
-    jobs:
-      - job: TestDEV
-        pool: LAPTOP-Q338O4FK
-        steps:
-          - task: UiPathTest@2
-            inputs:
-              testTarget: 'TestSet'
-              orchestratorConnection: 'UiPATH RPABOTSWORLD'
-              testSet: 'UiPathAzureDevOps_Tests'
-              folderName: 'Shared'
-              testReportDestination: '$(Pipeline.Workspace)\drop\'
-
+ - stage: Build
+   displayName: Create build artifact
+   jobs:
+     - job: BuildArtifact
+       pool: MYLAPTOP
+       steps:
+         - script: C:\Users\Satish\AppData\Local\UiPath\app-20.10.0-beta0149\UiRobot.exe pack $(Build.SourcesDirectory)\project.json -o $(Build.ArtifactStagingDirectory)\ -v 1.0.$(Build.BuildNumber)
+           displayName: "Build the artifact"
+         - publish: $(Build.ArtifactStagingDirectory)
+            artifact: drop
