Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,17 @@
 trigger:
- - main
+- main
+
 stages:
- - stage: Build
-   displayName: Create build artifact
-   jobs:
-     - job: BuildArtifact
-       pool: MYLAPTOP
-       steps:
-         - script: C:\Users\Satish\AppData\Local\UiPath\app-20.10.0-beta0149\UiRobot.exe pack $(Build.SourcesDirectory)\project.json -o $(Build.ArtifactStagingDirectory)\ -v 1.0.$(Build.BuildNumber)
-           displayName: "Build the artifact"
-         - publish: $(Build.ArtifactStagingDirectory)
-            artifact: drop
+- stage: Build
+  displayName: Create build artifact
+  jobs:
+  - job: BuildArtifact
+    pool:
+      Azure-UIP
+    steps:
+    - task: CmdLine@2
+      inputs:
+        script: 'C:\Users\Devops\AppData\Local\UiPath\app-20.10.0-beta0149\UiRobot.exe pack $(Build.SourcesDirectory)\project.json -o $(Build.ArtifactStagingDirectory)\ -v 1.0.$(Build.BuildNumber)'
+      displayName: 'Build the artifact'
+    - publish: $(Build.ArtifactStagingDirectory)
+      artifact: drop
