--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,9 @@ stages:
     pool:
       Azure-UIP
     steps:
-    - task: CmdLine@2
+    - task: UiPathPack@3
       inputs:
-        script: 'C:\Users\Devops\AppData\Local\UiPath\app-20.10.0-beta0149\UiRobot.exe pack $(Build.SourcesDirectory)\project.json -o $(Build.ArtifactStagingDirectory)\ -v 1.0.$(Build.BuildNumber)'
-      displayName: 'Build the artifact'
-    - publish: $(Build.ArtifactStagingDirectory)
-      artifact: drop
+        versionType: 'AutoVersion'
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+        orchestratorConnection: 'Azure-UIpath'
+        outputPath: '$(Build.ArtifactStagingDirectory)\Output'
