Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,8 @@ stages:
         projectJsonPath: '$(Build.SourcesDirectory)\project.json'
         orchestratorConnection: 'Azure-UIpath'
         outputPath: '$(Build.ArtifactStagingDirectory)\Output'
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestProject'
+        orchestratorConnection: 'Azure-UIpath'
+        folderName: 'Shared'
