--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,15 +1,14 @@
 trigger:
-  branches:
-    include:
-      - main
+  - master
 
 stages:
   - stage: Build
     displayName: Build Package
     jobs:
     - job: BuildPackage
-      pool:
-        vmImage: 'windows-latest'
+      pool: LAPTOP-Q338O4FK
+      cancelTimeoutInMinutes: 
+  
       steps:
       - task: UiPathPack@2
         inputs:
@@ -21,12 +20,11 @@ stages:
       - publish: $(Build.ArtifactStagingDirectory)
         artifact: drop
 
-  - stage: Assests
+  - stage: Assest
     displayName: Create Assests
     jobs:
       - job: CreateAssests
-        pool:
-          vmImage: 'windows-latest'
+        pool: LAPTOP-Q338O4FK
         steps:
         - task: UiPathAssets@2
           inputs:
@@ -34,62 +32,3 @@ stages:
             folderName: 'Shared'
             assetActionType: 'Deploy'
             csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
-
-  - stage: DeployDEV
-    displayName: Deploy build artifact to DEV
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - deployment: deployDEV
-        displayName: Deploy package to DEV Orchestrator
-        pool:
-          vmImage: 'windows-latest'
-        environment: DEV
-        strategy:
-         runOnce:
-          deploy:
-           steps:
-            - task: UiPathDeploy@2
-              inputs:
-                orchestratorConnection: 'UiPath DEV'
-                packagesPath: '$(Pipeline.Workspace)\drop\'
-                folderName: 'Shared'
-
-  - stage : CodeQuality
-    displayName: Check Code Analysis
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - job : CodeQuality
-        pool:
-          vmImage: 'windows-latest'
-        steps:
-          - task: SonarCloudPrepare@1
-            inputs:
-              SonarCloud: 'Sonar'
-              organization: 'rpabotsworld'
-              scannerMode: 'CLI'
-              configMode: 'manual'
-              cliProjectKey: 'rpabotsworld_UiPathAzureDevOpsExample'
-              cliProjectName: 'UiPathAzureDevOpsExample'
-              cliSources: '.'
-          - task: SonarCloudAnalyze@1
-          - task: SonarCloudPublish@1
-            inputs:
-              pollingTimeoutSec: '300'
-
-  - stage: TestDEV
-    displayName: Test After Publish
-    dependsOn: DeployDEV
-    condition: succeeded()
-    jobs:
-      - job: TestDEV
-        pool:
-          vmImage: 'windows-latest'
-        steps:
-          - task: UiPathTest@2
-            inputs:
-              testTarget: 'TestSet'
-              orchestratorConnection: 'UiPATH RPABOTSWORLD'
-              testSet: 'UiPathAzureDevOps_Tests'
-              folderName: 'Shared'
