--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,33 +1,16 @@
 trigger:
-  - master
+  - main
 
 stages:
   - stage: Build
     displayName: Build Package
     jobs:
     - job: BuildPackage
-      pool: LAPTOP-Q338O4FK
+      pool: Azure-UIP
       cancelTimeoutInMinutes: 
-      steps:
-      - task: UiPathPack@2
-        inputs:
-          versionType: 'AutoVersion'
-          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
-          outputType: 'Process'
-          orchestratorConnection: 'UiPath DEV'
-          outputPath: '$(Build.ArtifactStagingDirectory)'
-      - publish: $(Build.ArtifactStagingDirectory)
-        artifact: drop
-
-  - stage: Assest
-    displayName: Create Assests
-    jobs:
-      - job: CreateAssests
-        pool: LAPTOP-Q338O4FK
-        steps:
-        - task: UiPathAssets@2
-          inputs:
-            orchestratorConnection: 'UiPath DEV'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
+  - task: UiPathPack@3
+    inputs:
+      versionType: 'AutoVersion'
+      projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+      orchestratorConnection: 'Azure-UIpath'
+      outputPath: '$(Build.ArtifactStagingDirectory)\Output'
