--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -16,17 +16,34 @@ stages:
         projectJsonPath: '$(Build.SourcesDirectory)/project.json'
         orchestratorConnection: 'Azure-UIpath'
         outputPath: '$(Build.ArtifactStagingDirectory)/Output'
+   - stage: Assest
+    displayName: Create Assests
+    jobs:
+      - job: CreateAssests
+        pool: Azure-UIP
+        steps:
+        - task: UiPathAssets@3
+          inputs:
+            orchestratorConnection: 'Azure-UIpath'
+            folderName: 'Shared'
+            assetActionType: 'Deploy'
+            csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
 
-- stage: Asset
-  displayName: Create Assets
-  jobs:
-  - job: CreateAssets
-    pool:
-      name: Azure-UIP
-    steps:
-    - task: UiPathAssets@2
-      inputs:
-        orchestratorConnection: 'Azure-UIpath'
-        folderName: 'Shared'
-        assetActionType: 'Deploy'
-        csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
+ - stage: DeployDEV
+    displayName: Deploy build artifact to DEV
+    dependsOn: Build
+    condition: succeeded()
+    jobs:
+      - deployment: deployDEV
+        displayName: Deploy package to DEV Orchestrator
+        pool: LAPTOP-Q338O4FK
+        environment: DEV
+        strategy:
+         runOnce:
+          deploy:
+           steps:
+            - task: UiPathDeploy@3
+              inputs:
+                orchestratorConnection: 'Azure-UIpath'
+                packagesPath: '$(Pipeline.Workspace)\drop\'
+                folderName: 'Shared'
