--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,7 +28,7 @@ stages:
         orchestratorConnection: 'Azure-UIpath'
         folderName: 'Shared'
         assetActionType: 'Deploy'
-        csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
+        csvFile: '$(Build.SourcesDirectory)/Data/Assests.csv'
 
 - stage: DeployDEV
   displayName: Deploy build artifact to DEV
@@ -46,5 +46,42 @@ stages:
           - task: UiPathDeploy@3
             inputs:
               orchestratorConnection: 'Azure-UIpath'
-              packagesPath: '$(Pipeline.Workspace)\drop\'
+              packagesPath: '$(Pipeline.Workspace)/drop/'
               folderName: 'Shared'
+
+- stage: CodeQuality
+  displayName: Check Code Analysis
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - job: CodeQuality
+    steps:
+    - task: SonarCloudPrepare@3
+      inputs:
+        SonarCloud: 'Sonar'
+        organization: 'rpabotsworld'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'rpabotsworld_UiPathAzureDevOpsExample'
+        cliProjectName: 'UiPathAzureDevOpsExample'
+        cliSources: '.'
+    - task: SonarCloudAnalyze@1
+    - task: SonarCloudPublish@1
+      inputs:
+        pollingTimeoutSec: '300'
+
+- stage: TestDEV
+  displayName: Test After Publish
+  dependsOn: DeployDEV
+  condition: succeeded()
+  jobs:
+  - job: TestDEV
+    pool: LAPTOP-Q338O4FK
+    steps:
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestSet'
+        orchestratorConnection: 'Azure-UIpath'
+        testSet: 'UiPathAzureDevOps_Tests'
+        folderName: 'Shared'
+        testReportDestination: '$(Pipeline.Workspace)/drop/'
