--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -66,7 +66,7 @@ stages:
         cliProjectName: 'UiPathAzureDevOpsExample'
         cliSources: '.'
     - task: SonarCloudAnalyze@3
-    - task: SonarCloudPublish@3
+        - task: SonarCloudPublish@3
       inputs:
         pollingTimeoutSec: '300'
 
@@ -76,7 +76,7 @@ stages:
   condition: succeeded()
   jobs:
   - job: TestDEV
-    pool: LAPTOP-Q338O4FK
+    pool: Azure-UIP
     steps:
     - task: UiPathTest@3
       inputs:
