Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -55,6 +55,8 @@ stages:
   condition: succeeded()
   jobs:
   - job: CodeQuality
+    pool: Azure-UIP
+
 - stage: TestDEV
   displayName: Test After Publish
   dependsOn: DeployDEV
