--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -38,7 +38,7 @@ stages:
   - deployment: deployDEV
     displayName: Deploy package to DEV Orchestrator
     pool: Azure-UIP
-    environment: 
+    environment: ENV
     strategy:
       runOnce:
         deploy:
