--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,4 +25,9 @@ stages:
         testTarget: 'TestProject'
         orchestratorConnection: 'Azure-UIpath'
         folderName: 'Shared'
-
+    - task: UiPathDeploy@3
+      inputs:
+        packagePath: '$(Build.ArtifactStagingDirectory)\Output'
+        orchestratorConnection: 'Azure-UIpath'
+        environmentName: 'Production'
+        sleepBeforeStart: '30'
