Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -38,7 +38,9 @@ stages:
   - deployment: deployDEV
     displayName: Deploy package to DEV Orchestrator
     pool: Azure-UIP
-    environment: ENV
+    environment: 
+      name: 'DEV'
+      resourceType: 'VirtualMachine'
     strategy:
       runOnce:
         deploy:
