Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -39,7 +39,7 @@ stages:
     displayName: Deploy package to DEV Orchestrator
     pool: Azure-UIP
     environment: 
-      name: 'DEV'
+      name: 'dev'
       resourceType: 'VirtualMachine'
     strategy:
       runOnce:
