--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,26 +1,30 @@
 trigger:
 - main
 
+variables:
+- group: UiPath
+
 stages:
 - stage: Build
   displayName: Build Package
   jobs:
   - job: BuildPackage
-    pool:
-      name: Azure-UIP
-    timeoutInMinutes: 60
+    pool: Azure-UIP
     steps:
     - task: UiPathPack@3
       inputs:
         versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+        outputType: 'Process'
         orchestratorConnection: 'Azure-UIpath'
-        outputPath: '$(Build.ArtifactStagingDirectory)/Output'
-  
+        outputPath: '$(Build.ArtifactStagingDirectory)'
+    - publish: $(Build.ArtifactStagingDirectory)
+      artifact: drop
+
 - stage: Assest
-  displayName: Create Assests
+  displayName: Create Assets
   jobs:
-  - job: CreateAssests
+  - job: CreateAssets
     pool: Azure-UIP
     steps:
     - task: UiPathAssets@3
@@ -28,7 +32,7 @@ stages:
         orchestratorConnection: 'Azure-UIpath'
         folderName: 'Shared'
         assetActionType: 'Deploy'
-        csvFile: '$(Build.SourcesDirectory)/Data/Assests.csv'
+        csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
 
 - stage: DeployDEV
   displayName: Deploy build artifact to DEV
@@ -38,9 +42,7 @@ stages:
   - deployment: deployDEV
     displayName: Deploy package to DEV Orchestrator
     pool: Azure-UIP
-    environment: 
-      name: 'DEV'
-      resourceType: 'Standard'
+    environment: DEV
     strategy:
       runOnce:
         deploy:
@@ -48,10 +50,8 @@ stages:
           - task: UiPathDeploy@3
             inputs:
               orchestratorConnection: 'Azure-UIpath'
-              packagesPath: '$(Pipeline.Workspace)/drop/'
+              packagesPath: '$(Pipeline.Workspace)\drop\'
               folderName: 'Shared'
-
-     
 
 - stage: CodeQuality
   displayName: Check Code Analysis
@@ -59,7 +59,20 @@ stages:
   condition: succeeded()
   jobs:
   - job: CodeQuality
-    pool: Azure-UIP
+    steps:
+    - task: SonarCloudPrepare@1
+      inputs:
+        SonarCloud: 'Sonar'
+        organization: 'rpabotsworld'
+        scannerMode: 'CLI'
+        configMode: 'manual'
+        cliProjectKey: 'rpabotsworld_UiPathAzureDevOpsExample'
+        cliProjectName: 'UiPathAzureDevOpsExample'
+        cliSources: '.'
+    - task: SonarCloudAnalyze@1
+    - task: SonarCloudPublish@1
+      inputs:
+        pollingTimeoutSec: '300'
 
 - stage: TestDEV
   displayName: Test After Publish
@@ -72,7 +85,7 @@ stages:
     - task: UiPathTest@3
       inputs:
         testTarget: 'TestSet'
-        orchestratorConnection: 'Azure-UIpath'
+        orchestratorConnection: 'UiPATH RPABOTSWORLD'
         testSet: 'UiPathAzureDevOps_Tests'
         folderName: 'Shared'
-        testReportDestination: '$(Pipeline.Workspace)/drop/'
+        testReportDestination: '$(Pipeline.Workspace)\drop\'
