--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -32,7 +32,7 @@ stages:
         orchestratorConnection: 'Azure-UIpath'
         folderName: 'Shared'
         assetActionType: 'Deploy'
-        csvFile: '$(Build.SourcesDirectory)\Data\Assets.csv'
+        csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
 
 - stage: DeployDEV
   displayName: Deploy build artifact to DEV
