--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -50,7 +50,7 @@ stages:
           - task: UiPathDeploy@3
             inputs:
               orchestratorConnection: 'Azure-UIpath'
-              packagesPath: '$(Pipeline.Workspace)\drop\'
+              packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
               folderName: 'Shared'
 
 - stage: TestDEV
