--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,33 +1,72 @@
 trigger:
-- main
+  - master
 
 variables:
-- group: UiPath
+  - group: UiPath
 
 stages:
-- stage: Build
-  displayName: 'Build Package'
-  jobs:
-  - job: BuildPackage
-    pool:
-      name: Azure-UIP
-    steps:
-    - task: UiPathPack@3
-      inputs:
-        versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-        orchestratorConnection: 'Azure-UIpath'
-        outputPath: '$(Build.ArtifactStagingDirectory)\Output'
+  - stage: Build
+    displayName: Build Package
+    jobs:
+      - job: BuildPackage
+        pool: Azure-UIP
+        steps:
+          - task: UiPathPack@3
+            inputs:
+              versionType: 'AutoVersion'
+              projectJsonPath: '$(Build.SourcesDirectory)/project.json'
+              outputType: 'Process'
+              orchestratorConnection: 'UiPath DEV'
+              outputPath: '$(Build.ArtifactStagingDirectory)'
+          - publish: $(Build.ArtifactStagingDirectory)
+            artifact: drop
+
 
   - stage: Assest
-    displayName: Create Assests
+    displayName: Create Assets
     jobs:
-      - job: CreateAssests
-        pool: LAPTOP-Q338O4FK
+      - job: CreateAssets
+        pool: Azure-UIP
         steps:
-        - task: UiPathAssets@2
-          inputs:
-            orchestratorConnection: 'UiPath DEV'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)\Data\Assests.csv'
+          - task: UiPathAssets@3
+            inputs:
+              orchestratorConnection: 'Azure-UIpath'
+              folderName: 'Shared'
+              assetActionType: 'Deploy'
+              csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
+
+  - stage: DeployDEV
+    displayName: Deploy build artifact to DEV
+    dependsOn: Build
+    condition: succeeded()
+    jobs:
+      - deployment: deployDEV
+        displayName: Deploy package to DEV Orchestrator
+        pool: Azure-UIP
+        environment: DEV
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - task: UiPathDeploy@3
+                  inputs:
+                    orchestratorConnection: 'Azure-UIpath'
+                    packagesPath: '$(Pipeline.Workspace)/drop/'
+                    folderName: 'Shared'
+
+  - stage: TestDEV
+    displayName: Test After Publish
+    dependsOn: DeployDEV
+    condition: succeeded()
+    jobs:
+      - job: TestDEV
+        pool: Azure-UIP
+        steps:
+          - task: UiPathTest@3
+            inputs:
+              testTarget: 'TestSet'
+              orchestratorConnection: 'Azure-UIpath'
+              testSet: 'UiPathAzureDevOps_Tests'
+              folderName: 'Shared'
+              testReportDestination: '$(Pipeline.Workspace)/drop/'
+
