--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -16,7 +16,7 @@ stages:
               versionType: 'AutoVersion'
               projectJsonPath: '$(Build.SourcesDirectory)/project.json'
               outputType: 'Process'
-              orchestratorConnection: 'UiPath DEV'
+              orchestratorConnection: 'Azure-UIpath'
               outputPath: '$(Build.ArtifactStagingDirectory)'
           - publish: $(Build.ArtifactStagingDirectory)
             artifact: drop
