Update azure-pipelines-1.yml for Azure Pipelines
updated

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -51,7 +51,7 @@ stages:
                 - task: UiPathDeploy@3
                   inputs:
                     orchestratorConnection: 'Azure-UIpath'
-                    packagesPath: '$(Pipeline.Workspace)/output/'
+                    packagesPath: '$(Pipeline.Workspace)/drop/'
                     folderName: 'Shared'
 
   - stage: TestDEV
