Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -64,7 +64,6 @@ stages:
         steps:
           - task: UiPathTest@3
             inputs:
-              testTarget: 'TestSet'
+              testTarget: 'TestProject'
               orchestratorConnection: 'Azure-UIpath'
-              testSet: 'UiPathAzureDevOps_Tests'
               folderName: 'Shared'
