--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -47,12 +47,12 @@ stages:
           runOnce:
             deploy:
               steps:
-                - task: NuGetCommand@2
-                  inputs:
-                    command: 'restore'
-                    restoreSolution: '**/*.sln'
-                    feedsToUse: 'select'
-                    vstsFeed: 'c308d515-72d0-4d86-be1f-25386bead831'
+                - task: UiPathTest@3
+            inputs:
+              orchestratorConnection: 'Azure-UIpath'
+              
+              folderName: 'Shared'
+              testReportDestination: '$(Pipeline.Workspace)\drop'
 
   - stage: TestDEV
     displayName: Test After Publish
