--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -9,7 +9,8 @@ stages:
     displayName: Build Package
     jobs:
       - job: BuildPackage
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         steps:
           - task: UiPathPack@3
             inputs:
@@ -18,41 +19,43 @@ stages:
               outputType: 'Process'
               orchestratorConnection: 'Azure-UIpath'
               outputPath: '$(Build.ArtifactStagingDirectory)'
-          - publish: $(Build.ArtifactStagingDirectory)
-            artifact: drop
+          - publish: 
+              artifact: drop
+              path: $(Build.ArtifactStagingDirectory)
 
-  - stage: Assest
+  - stage: Assets
     displayName: Create Assets
     jobs:
       - job: CreateAssets
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         steps:
           - task: UiPathAssets@3
             inputs:
               orchestratorConnection: 'Azure-UIpath'
               folderName: 'Shared'
               assetActionType: 'Deploy'
-              csvFile: '$(Build.SourcesDirectory)/Data/Assests.csv'
+              csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
   - stage: DeployDEV
     displayName: Deploy build artifact to DEV
     dependsOn: Build
     condition: succeeded()
     jobs:
-      - deployment: deployDEV
+      - deployment: DeployDEV
         displayName: Deploy package to DEV Orchestrator
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         environment: DEV
         strategy:
           runOnce:
             deploy:
               steps:
                 - task: UiPathTest@3
-            inputs:
-              orchestratorConnection: 'Azure-UIpath'
-              
-              folderName: 'Shared'
-              testReportDestination: '$(Pipeline.Workspace)\drop'
+                  inputs:
+                    orchestratorConnection: 'Azure-UIpath'
+                    folderName: 'Shared'
+                    testReportDestination: '$(Pipeline.Workspace)/drop'
 
   - stage: TestDEV
     displayName: Test After Publish
@@ -60,7 +63,8 @@ stages:
     condition: succeeded()
     jobs:
       - job: TestDEV
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         steps:
           - task: UiPathTest@3
             inputs:
