Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -69,5 +69,5 @@ stages:
               orchestratorConnection: 'Azure-UIpath'
               testSet: 'UiPathAzureDevOps_Tests'
               folderName: 'Shared'
-              testReportDestination: '$(Pipeline.Workspace)/drop'
+              testReportDestination: '$(Build.ArtifactStagingDirectory)'
 
