--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,4 +1,3 @@
-
 trigger:
   - main
 
@@ -10,7 +9,8 @@ stages:
     displayName: Build Package
     jobs:
       - job: BuildPackage
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         steps:
           - task: UiPathPack@3
             inputs:
@@ -19,15 +19,16 @@ stages:
               outputType: 'Process'
               orchestratorConnection: 'Azure-UIpath'
               outputPath: '$(Build.ArtifactStagingDirectory)'
-          - publish: $(Build.ArtifactStagingDirectory)
-            artifact: drop
-
+          - publish: 
+              artifact: drop
+              path: '$(Build.ArtifactStagingDirectory)'
 
   - stage: Assest
     displayName: Create Assets
     jobs:
       - job: CreateAssets
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         steps:
           - task: UiPathAssets@3
             inputs:
@@ -43,8 +44,9 @@ stages:
     jobs:
       - deployment: deployDEV
         displayName: Deploy package to DEV Orchestrator
-        pool: Azure-UIP
-        environment: DEV
+        pool:
+          name: Azure-UIP
+        environment: 'DEV'
         strategy:
           runOnce:
             deploy:
@@ -52,7 +54,7 @@ stages:
                 - task: UiPathDeploy@3
                   inputs:
                     orchestratorConnection: 'Azure-UIpath'
-                    packagesPath: '$(Pipeline.Workspace)'
+                    packagesPath: '$(Pipeline.Workspace)/drop/*.nupkg'
                     folderName: 'Shared'
 
   - stage: TestDEV
@@ -61,7 +63,8 @@ stages:
     condition: succeeded()
     jobs:
       - job: TestDEV
-        pool: Azure-UIP
+        pool:
+          name: Azure-UIP
         steps:
           - task: UiPathTest@3
             inputs:
@@ -70,4 +73,3 @@ stages:
               testSet: 'UiPathAzureDevOps_Tests'
               folderName: 'Shared'
               testReportDestination: '$(Build.ArtifactStagingDirectory)'
-
