--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -2,7 +2,7 @@ trigger:
   - main
 
 variables:
-  - group: UiPath
+  group: UiPath
 
 stages:
   - stage: Build
@@ -16,15 +16,19 @@ stages:
             inputs:
               versionType: 'AutoVersion'
               projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-              outputType: 'Process'
               orchestratorConnection: 'Azure-UIpath'
-              outputPath: '$(Build.ArtifactStagingDirectory)'
+              outputPath: '$(Build.ArtifactStagingDirectory)/Output'
+          - task: PublishBuildArtifacts@1
+            inputs:
+              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+              ArtifactName: 'drop'
+              publishLocation: 'Container'
           - task: PublishPipelineArtifact@1
             inputs:
               targetPath: '$(Pipeline.Workspace)'
               publishLocation: 'pipeline'
 
-  - stage: Assest
+  - stage: Asset
     displayName: Create Assets
     jobs:
       - job: CreateAssets
@@ -36,7 +40,7 @@ stages:
               orchestratorConnection: 'Azure-UIpath'
               folderName: 'Shared'
               assetActionType: 'Deploy'
-              csvFile: '$(Build.SourcesDirectory)/Data/Assests.csv'
+              csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
   - stage: DeployDEV
     displayName: Deploy build artifact to DEV
@@ -55,7 +59,7 @@ stages:
                 - task: UiPathDeploy@3
                   inputs:
                     orchestratorConnection: 'Azure-UIpath'
-                    packagesPath: '$(Pipeline.Workspace)/drop/*.nupkg'
+                    packagesPath: '$(Build.ArtifactStagingDirectory)/Output'
                     folderName: 'Shared'
 
   - stage: TestDEV
