--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,80 +1,28 @@
 trigger:
-  - main
-
-variables:
-  group: UiPath
+- main
 
 stages:
-  - stage: Build
-    displayName: Build Package
-    jobs:
-      - job: BuildPackage
-        pool:
-          name: Azure-UIP
-        steps:
-          - task: UiPathPack@3
-            inputs:
-              versionType: 'AutoVersion'
-              projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-              orchestratorConnection: 'Azure-UIpath'
-              outputPath: '$(Build.ArtifactStagingDirectory)/Output'
-          - task: PublishBuildArtifacts@1
-            inputs:
-              PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-              ArtifactName: 'drop'
-              publishLocation: 'Container'
-          - task: PublishPipelineArtifact@1
-            inputs:
-              targetPath: '$(Pipeline.Workspace)'
-              publishLocation: 'pipeline'
-
-  - stage: Asset
-    displayName: Create Assets
-    jobs:
-      - job: CreateAssets
-        pool:
-          name: Azure-UIP
-        steps:
-          - task: UiPathAssets@3
-            inputs:
-              orchestratorConnection: 'Azure-UIpath'
-              folderName: 'Shared'
-              assetActionType: 'Deploy'
-              csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
-
-  - stage: DeployDEV
-    displayName: Deploy build artifact to DEV
-    dependsOn: Build
-    condition: succeeded()
-    jobs:
-      - deployment: deployDEV
-        displayName: Deploy package to DEV Orchestrator
-        pool:
-          name: Azure-UIP
-        environment: 'DEV'
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - task: UiPathDeploy@3
-                  inputs:
-                    orchestratorConnection: 'Azure-UIpath'
-                    packagesPath: '$$(Pipeline.Workspace)'
-                    folderName: 'Shared'
-
-  - stage: TestDEV
-    displayName: Test After Publish
-    dependsOn: DeployDEV
-    condition: succeeded()
-    jobs:
-      - job: TestDEV
-        pool:
-          name: Azure-UIP
-        steps:
-          - task: UiPathTest@3
-            inputs:
-              testTarget: 'TestSet'
-              orchestratorConnection: 'Azure-UIpath'
-              testSet: 'UiPathAzureDevOps_Tests'
-              folderName: 'Shared'
-              testReportDestination: '$(Build.ArtifactStagingDirectory)'
+- stage: Build
+  displayName: Create build artifact
+  jobs:
+  - job: BuildArtifact
+    pool:
+      Azure-UIP
+    steps:
+    - task: UiPathPack@3
+      inputs:
+        versionType: 'AutoVersion'
+        projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+        orchestratorConnection: 'Azure-UIpath'
+        outputPath: '$(Build.ArtifactStagingDirectory)\Output'
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
+    
+    - task: UiPathDeploy@3
+      inputs:
+        orchestratorConnection: 'Azure-UIpath'
+        packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
+        folderName: 'Shared'
