--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -41,7 +41,7 @@ stages:
             orchestratorConnection: 'Azure-UIpath'
             folderName: 'Shared'
             assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)/Data/Assests.csv'
+            csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
 
 - stage: DeployDEV
   displayName: Deploy build artifact to DEV
@@ -69,17 +69,6 @@ stages:
   condition: succeeded()
   jobs:
     - job: TestDEV
-      pool:
-        name: Azure-UIP
-      steps:
-        - task: UiPathTest@3
-          inputs:
-            testTarget: 'TestSet'
-            orchestratorConnection: 'Azure-UIpath'
-            testSet: 'UiPathAzureDevOps_Tests'
-            folderName: 'Shared'
-            testReportDestination: '$(Build.ArtifactStagingDirectory)'
-    - job: TestDEV2
       pool:
         name: Azure-UIP
       steps:
