Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -78,4 +78,4 @@ stages:
             orchestratorConnection: 'Azure-UIpath'
             testSet: 'UiPathAzureTestSet'
             folderName: 'Shared'
-            testReportDestination: '$(Build.ArtifactStagingDirectory)'
+            testReportDestination: '$(Build.SourcesDirectory)/project.json'
