--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,4 +1,3 @@
-
 trigger:
 - main
 
@@ -63,6 +62,11 @@ stages:
                   command: 'restore'
                   restoreSolution: '**/*.sln'
                   feedsToUse: 'select'
+              - task: UiPathDeploy@3
+                inputs:
+                  orchestratorConnection: 'Azure-UIpath'
+                  packagesPath: '$(Build.ArtifactStagingDirectory)/Output'
+                  folderName: 'Shared'
 
 - stage: TestDEV
   displayName: Test After Publish
@@ -79,4 +83,3 @@ stages:
             orchestratorConnection: 'Azure-UIpath'
             testSet: 'UiPathAzureTestSet'
             folderName: 'Shared'
-            testReportDestination: '$(Pipeline.Workspace)\drop'
