--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,79 +1,21 @@
 trigger:
-- main
-
+  - master
 variables:
-  group: UiPath
+  - group: UiPath
 
 stages:
-- stage: Build
-  displayName: Create build artifact
-  jobs:
-  - job: BuildArtifact
-    pool:
-      name: Azure-UIP
-    steps:
-    - task: UiPathPack@3
-      inputs:
-        versionType: 'AutoVersion'
-        projectJsonPath: '$(Build.SourcesDirectory)/project.json'
-        orchestratorConnection: 'Azure-UIpath'
-        outputPath: '$(Build.ArtifactStagingDirectory)/Output'
-    - task: PublishBuildArtifacts@1
-      inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-        ArtifactName: 'drop'
-        publishLocation: 'Container'
-    - task: UiPathDeploy@3
-      inputs:
-        orchestratorConnection: 'Azure-UIpath'
-        packagesPath: '$(Build.ArtifactStagingDirectory)/Output'
-        folderName: 'Shared'
-
-- stage: Asset
-  displayName: Create Assets
-  jobs:
-    - job: CreateAssets
-      pool:
-        name: Azure-UIP
+  - stage: Build
+    displayName: Build Package
+    jobs:
+    - job: BuildPackage
+      pool:  Azure-UIP
       steps:
-        - task: UiPathAssets@3
-          inputs:
-            orchestratorConnection: 'Azure-UIpath'
-            folderName: 'Shared'
-            assetActionType: 'Deploy'
-            csvFile: '$(Build.SourcesDirectory)/Data/Assets.csv'
-
-- stage: DeployDEV
-  displayName: Deploy build artifact to DEV
-  dependsOn: Build
-  condition: succeeded()
-  jobs:
-    - deployment: deployDEV
-      displayName: Restore package to DEV Orchestrator
-      pool:
-        name: Azure-UIP
-      environment: 'DEV'
-      strategy:
-        runOnce:
-          deploy:
-            steps:
-              - task: NuGetCommand@2
-                inputs:
-                  command: 'restore'
-                  restoreSolution: '**/*.sln'
-                  feedsToUse: 'select'
-
-- stage: TestDEV
-  displayName: Test After Publish
-  dependsOn: DeployDEV
-  condition: succeeded()
-  jobs:
-    - job: TestDEV
-      pool:
-        name: Azure-UIP
-      steps:
-        - task: UiPathTest@3
-          inputs:
-            testTarget: 'TestProject'
-            orchestratorConnection: 'Azure-UIpath'
-            folderName: 'Shared'
+      - task: UiPathPack@3
+        inputs:
+          versionType: 'AutoVersion'
+          projectJsonPath: '$(Build.SourcesDirectory)\project.json'
+          outputType: 'Process'
+          orchestratorConnection: 'Azure-UIpath'
+          outputPath: '$(Build.ArtifactStagingDirectory)'
+      - publish: $(Build.ArtifactStagingDirectory)
+        artifact: drop
