--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,3 +26,8 @@ stages:
         orchestratorConnection: 'Azure-UIpath'
         packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
         folderName: 'Shared'
+    - task: UiPathTest@3
+      inputs:
+        testTarget: 'TestProject'
+        orchestratorConnection: 'Azure-UIpath'
+        folderName: 'Shared'
