Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -76,4 +76,5 @@ stages:
           inputs:
             testTarget: 'TestProject'
             orchestratorConnection: 'Azure-UIpath'
+            testProjectPath: '$(Build.ArtifactStagingDirectory)/Output'
             folderName: 'Shared'
