--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -72,9 +72,14 @@ stages:
       pool:
         name: Azure-UIP
       steps:
-        - task: UiPathTest@3
+        
+        - task: VSTest@2
           inputs:
-            testTarget: 'TestProject'
-            orchestratorConnection: 'Azure-UIpath'
-            testProjectPath: '$(Build.ArtifactStagingDirectory)/Output'
-            folderName: 'Shared'
+            platform: 'Any CPU'
+            configuration: 'release'
+            testSelector: 'testAssemblies'
+            testAssemblyVer2: |
+              **\*test*.dll
+              !**\*TestAdapter.dll
+              !**\obj\**
+            searchFolder: '$(Build.SourcesDirectory)'
