Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -59,7 +59,10 @@ stages:
           steps:
           - task: VSTest@2
             inputs:
-              testSelector: 'testRun'
+              testSelector: 'testAssemblies'
+              testAssemblyVer2: |
+                **\*test*.dll
+                !**\*TestAdapter.dll
+                !**\obj\**
               searchFolder: '$(System.DefaultWorkingDirectory)'
-              vsTestVersion: 'toolsInstaller'
 
